watch this space

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>you're mother </h1>
-<p>hairy balls.</p>
-<img src="troll.jpg" alt="you got trolled">
+<h1>watch thsi space </h1>
+<p></p>
 </body>
 </html>
