began The Interview

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>watch thsi space </h1>
-<p></p>
+<h1>The Interview </h1>
+<p>The lights glare on his forehead, already slick. He still isn't used to this. He wasn't supposed to ever have to get used to this, but for some reason they let him. </p>
 </body>
 </html>
