The Interview: Coming Soon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>The Interview </h1>
-<p>The lights glare on his forehead, already slick. He still isn't used to this. He wasn't supposed to ever have to get used to this, but for some reason they let him. </p>
+<p> coming soon </p>
 </body>
 </html>
