--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>The Interview </h1>
 <p> coming soon </p>
-<p> <a href="robeson.xyz/pages">pages here</a> <p>
+<p> <a href="/pages">pages here</a> <p>
 
 </body>
 </html>
